Fix spacing for the delete article button

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -523,6 +523,7 @@ form.inline input[type="submit"] {
 
 form.inline input[type="submit"]:not(.button) {
     margin: 0;
+    padding: 0;
     border: none;
 }
 
